# ai-drawing-management-system

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  DOCKER_README.md  README.md  config.json  convert_dxf_to_pdf.py  create_rotated_test_pdf.py  design-skills.md  docker-compose.dev.yml  docker-compose.yml  requirements.md  tasks.md  test_frontend_backend.py  test_rotation_upload.py  test_upload_pdf.py  ui-designs.md  upload_test_debug.py  upload_test_files.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  TEST_SUMMARY.md  check_db.py  check_schema.py  create_rotated_test_pdf.py  fix_filenames.py  fix_original_filename_default.py  init_db.py  migrate_add_adjacent_text.py  migrate_add_original_filename.py  pyproject.toml  test_basic.py  test_drawing_service.py  test_e2e_flow.py  test_integration.py  test_websocket_lock.py
backend/app/: database.py  main.py
backend/app/api/: __init__.py
backend/app/models/: __init__.py  balloon.py  drawing.py  equipment.py  equipment_attachment.py  line.py  lock.py  spec_number.py  spec_sheet.py  spec_sheet_item.py  spec_sheet_revision.py
backend/app/schemas/: __init__.py  drawing.py  equipment.py  equipment_attachment.py  line.py  (+4 more)
backend/migrations/: add_equipment_attachments.py  add_equipment_tables.py  add_oracle_sync_columns.py  add_soft_type_column.py  add_spec_sheet_tables.py  add_web_link_column.py
backend/prompts/: balloon_extraction.txt  classification.txt  extraction.txt  revision_extraction.txt  rotation_detection.txt  summary_extraction.txt
backend/scripts/: seed_equipment_data.py
(+126 files in other folders)
